Fixes z-index issue on index indicator

--- a/src/ImageGallery.scss
+++ b/src/ImageGallery.scss
@@ -192,4 +192,5 @@ $ig-blue: #337ab7;
   padding: 10px 20px;
   position: absolute;
   right: 0;
+  z-index: 1;
 }
